--- a/templates/web/base.html
+++ b/templates/web/base.html
@@ -79,6 +79,9 @@
     {% endblock %}
 
     {% include 'web/partials/footer.html' %}
+    <a href="https://wa.me/917306481304" class="whatsapp" target="blank">
+        <img src="{% static 'web/images/whatsapp.png' %}" alt="whatsapp">
+    </a>
 
     
     <script  src="{% static 'web/js/jquery-1.12.4.min.js' %}"></script>
