--- a/templates/web/blog.html
+++ b/templates/web/blog.html
@@ -19,7 +19,7 @@
                             <div>
                                 <ul class="mt-breadcrumb breadcrumb-style-2">
                                     <li><a href="#">Home</a></li>
-                                    <li>Blog</li>
+                                    <li>Updates</li>
                                 </ul>
                             </div>
                         
