--- a/templates/web/gallery.html
+++ b/templates/web/gallery.html
@@ -66,7 +66,7 @@
                     </div> -->
                     <!-- COLUMNS 2 -->
                     {% for gallery in galleries %}
-                    <div class="masonry-item  cat-2 col-md-3 col-sm-6 m-b30">
+                    <div class="masonry-item  col-lg-3 col-md-3 col-sm-6 col-6 m-b30">
                         <div class="mt-box   image-hover-block">
                             <div class="mt-thum-bx">
                                 <img src="{{gallery.image.crop.263x325}}" alt="">
