--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -13,8 +13,7 @@
                 <div id="welcome" class="rev_slider fullscreenbanner" style="display:none;" data-version="5.4.3.1">
                     <ul>	
 
-
-                         <!-- SLIDE 2 -->
+                              <!-- SLIDE 2 -->
                        <li data-index="rs-902" 
                        data-transition="fade" 
                        data-slotamount="default" 
@@ -98,7 +97,7 @@
                            font-weight: 700;
                            color:#111;
                            border-width:0px;font-family: 'Poppins', sans-serif; text-transform:uppercase ;">
-                           <div>STEEL PIPES & SHEETS</div>
+                           <div>TMT STEEL BARS</div>
                            
                            </div>
                        
@@ -151,7 +150,7 @@
                            font-weight: 500;
                            color:#111;
                             border-width:0px;font-family: 'Poppins', sans-serif;">
-                           Excel Traders aims to provide you with the best quality steel pipes and sheets.
+                           Get the best quality TMT steel bars from Excel Traders for your construction needs.
                            
                            </div>                                                               
                        
@@ -184,7 +183,7 @@
     
                        </li>
 
-                       
+                         
                         <!-- SLIDE 1 -->
                         <li data-index="rs-901" 
                         data-transition="fade" 
@@ -269,7 +268,8 @@
                             font-weight: 700;
                             color:#111;
                             border-width:0px;font-family: 'Poppins', sans-serif; text-transform:uppercase ;">
-                            <div>TMT STEEL BARS</div>
+                            <div> STEEL PIPES & SHEETS</div>
+                           
                             
                             </div>
                         
@@ -322,7 +322,8 @@
                             font-weight: 500;
                             color:#111;
                              border-width:0px;font-family: 'Poppins', sans-serif;">
-                            Get the best quality TMT steel bars from Excel Traders for your construction needs.
+                             Excel Traders aims to provide you with the best quality steel pipes and sheets.
+                            
                             
                             </div>                                                               
                         
@@ -354,8 +355,8 @@
                             </div>
      
                         </li>
-                        
-                        
+
+
                         
                         <li data-index="rs-903" data-transition="fade" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="default" data-easeout="default" data-masterspeed="default"  
                         
@@ -537,6 +538,8 @@
             </div>
             <!-- SLIDER END -->             
                  
+
+                 
             <!-- OUR SPECIALLIZATION START -->
             <div class="section-full mobile-page-padding bg-white  p-t80 p-b30 bg-repeat square_shape1" style="background-image:url({% static 'web/background/bg-5.png' %});">
 				<div class="container">
@@ -601,7 +604,8 @@
                 </div>                
              </div>   
             <!-- OUR SPECIALLIZATION END --> 
-
+            
+            
             <!-- ABOUT COMPANY START -->
             <div class="section-full mobile-page-padding p-t80 p-b30 bg-dark bg-repeat square_shape2 bg-moving" style="background-image:url({% static 'web/images/background/bg-6.png' %})">
                 <div class="container">
@@ -609,7 +613,7 @@
 					<div class="section-head">
 						<div class="mt-separator-outer separator-center">
 							<div class="mt-separator">
-								<h2 class="text-white text-uppercase sep-line-one "><span class="font-weight-300 text-primary">About</span> EXCEL</h2>
+								<h2 class="text-white text-uppercase sep-line-one "><span class="font-weight-300 text-primary-about">About</span> EXCEL</h2>
 							</div>
 						</div>
 					</div>                   
@@ -670,6 +674,8 @@
                 </div>                
             </div>   
             <!-- ABOUT COMPANY END -->
+            
+
             
             <!-- OUR VALUE START -->
             <div class="section-full mobile-page-padding p-t80 p-b30 bg-white">
@@ -738,36 +744,36 @@
                                         </div>                                    
                                         <span class="progressText text-black"><B>TMT bars</B></span>
                                         <div class="progress mt-probar-1  m-b30 m-t10">
-                                            <div class="progress-bar bg-primary " role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" >
-                                                <span  class="popOver" data-toggle="tooltips" data-placement="top" title="95%"></span>
+                                            <div class="progress-bar bg-primary " role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" >
+                                                <span  class="popOver" data-toggle="tooltips" data-placement="top" title="85%"></span>
                                             </div>
                                         </div>
                                         
                                         <span class="progressText text-black"><B>Cement</B></span>
                                         <div class="progress mt-probar-1 m-b30 m-t10">
-                                            <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="97" aria-valuemin="10" aria-valuemax="100">
-                                                <span  class="popOver" data-toggle="tooltips" data-placement="top" title="97%"></span>
+                                            <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="79" aria-valuemin="10" aria-valuemax="100">
+                                                <span  class="popOver" data-toggle="tooltips" data-placement="top" title="79%"></span>
                                             </div>
                                         </div>
             
                                         <span class="progressText text-black"><B>Steel Pipes & Sheets</B></span>
                                         <div class="progress mt-probar-1 m-b30 m-t10">
-                                            <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="98" aria-valuemin="0" aria-valuemax="100">
-                                                <span  class="popOver" data-toggle="tooltips" data-placement="top" title="98%"></span>
+                                            <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                                                <span  class="popOver" data-toggle="tooltips" data-placement="top" title="80%"></span>
                                             </div>
                                         </div>
                                         
                                         <span class="progressText text-black"><B>Net</B></span>
                                         <div class="progress mt-probar-1 m-b30 m-t10">
-                                            <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="91" aria-valuemin="0" aria-valuemax="100">
-                                                <span  class="popOver" data-toggle="tooltips" data-placement="top" title="91%"></span>
+                                            <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100">
+                                                <span  class="popOver" data-toggle="tooltips" data-placement="top" title="66%"></span>
                                             </div>
                                         </div>
                                         
                                         <span class="progressText text-black"><B>Building Materials</B></span>
                                         <div class="progress mt-probar-1 m-b30 m-t10">
-                                            <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                                                <span  class="popOver" data-toggle="tooltips" data-placement="top" title="90%"></span>
+                                            <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="59" aria-valuemin="0" aria-valuemax="100">
+                                                <span  class="popOver" data-toggle="tooltips" data-placement="top" title="59%"></span>
                                             </div>
                                         </div>                                        
                                 
@@ -779,7 +785,7 @@
                  </div>
             </div>   
             <!-- OUR VALUE END -->            
-            
+           
             <!-- OUR MISSION START -->
             <div class="section-full mobile-page-padding mission-outer-section  p-t80 p-b30 bg-gray bg-no-repeat bg-right-center" style="background-image:url({% static 'web/images/left-men.png' %}), url({% static 'web/images/background/bg-4.png' %}); ">
 				<div class="section-content">
@@ -872,7 +878,7 @@
                             <div class="section-head text-white"> 
                                 <div class="mt-separator-outer separator-left">
                                     <div class="mt-separator">
-                                        <h2 class="text-white text-uppercase sep-line-one "><span class="font-weight-300 text-primary">Our</span> Products</h2>
+                                        <h2 class="text-white text-uppercase sep-line-one "><span class="font-weight-300 text-primary-about">Our</span> Products</h2>
                                     </div>
                                 </div>
                                 <h3>Your search for building materials ends in Excel Traders, we are here to deliver fulfil your building necessities.</h3>
