--- a/templates/web/partials/footer.html
+++ b/templates/web/partials/footer.html
@@ -48,7 +48,7 @@
                     <p class="max-w400">Excel Traders is your best choice in purchasing building materials for the best quality and offers.</p>                                
                     
                     <ul class="social-icons  mt-social-links">
-                        <li><a href="javascript:void(0);" class="fa fa-facebook"></a></li>
+                        <li><a href="https://www.facebook.com/search/top?q=excel%20steels%20and%20cements" class="fa fa-facebook"></a></li>
                         <li><a href="https://www.instagram.com/excelsteelscements/?utm_medium=copy_link" class="fa fa-instagram"></a></li>
                      </ul>                                     
                 </div>
