--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -357,6 +357,7 @@
                         </li>
 
 
+                         <!-- SLIDE 3 -->
                         
                         <li data-index="rs-903" data-transition="fade" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="default" data-easeout="default" data-masterspeed="default"  
                         
@@ -519,7 +520,178 @@
                             <a href="/products/" class="site-button-secondry btn-effect">More About</a>
                             </div>
      
-                        </li>                                                                                             
+                        </li>  
+                        
+                        
+                         <!-- SLIDE 4 -->
+                       <li data-index="rs-902" 
+                       data-transition="fade" 
+                       data-slotamount="default" 
+                       data-hideafterloop="0" 
+                       data-hideslideonmobile="off"  
+                       data-easein="default" 
+                       data-easeout="default" 
+                       data-masterspeed="default"  
+                       data-thumb="../../static/web/images/main-slider/slider1/slide4.jpg" 
+                       data-rotate="0"  
+                       data-fstransition="fade" 
+                       data-fsmasterspeed="300" 
+                       data-fsslotamount="7" 
+                       data-saveperformance="off"  
+                       data-title="" 
+                       data-param1="" 
+                       data-param2="" 
+                       data-param3="" 
+                       data-param4="" 
+                       data-param5="" 
+                       data-param6="" 
+                       data-param7="" 
+                       data-param8="" 
+                       data-param9="" 
+                       data-param10="" 
+                       data-description="">
+                           <!-- MAIN IMAGE -->
+                           <img src="{% static 'web/images/main-slider/slider1/slide4.jpg' %}"  alt=""  data-lazyload="{% static 'web/images/main-slider/slider1/slide4.jpg' %}" data-bgposition="center center" 
+                           data-bgfit="cover" data-bgparallax="4" class="rev-slidebg" data-no-retina>
+                           <!-- LAYERS -->
+                           <!-- LAYER NR. 1 [ for overlay ] -->
+                           <div class="tp-caption tp-shape tp-shapewrapper " 
+                           id="slide-902-layer-0" 
+                           data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" 
+                           data-y="['middle','middle','middle','middle']" data-voffset="['0','0','0','0']" 
+                           data-width="full"
+                           data-height="full"
+                           data-whitespace="nowrap"
+                           data-type="shape" 
+                           data-basealign="slide" 
+                           data-responsive_offset="off" 
+                           data-responsive="off"
+                           data-frames='[
+                           {"from":"opacity:0;","speed":1000,"to":"o:1;","delay":0,"ease":"Power4.easeOut"},
+                           {"delay":"wait","speed":1000,"to":"opacity:0;","ease":"Power4.easeOut"}
+                           ]'
+                           data-textAlign="['left','left','left','left']"
+                           data-paddingtop="[0,0,0,0]"
+                           data-paddingright="[0,0,0,0]"
+                           data-paddingbottom="[0,0,0,0]"
+                           data-paddingleft="[0,0,0,0]"
+                           
+                           style="z-index: 1;background-color:rgba(255, 255, 255, 0.3);border-color:rgba(0, 0, 0, 0);border-width:0px;"> 
+                           </div>
+                           
+                          
+                          
+                                                       
+                           <!-- LAYER NR. 4 [ for title ] -->
+                           <div class="tp-caption   tp-resizeme" 
+                           id="slide-902-layer-2" 
+                           data-x="['left','left','left','left']" data-hoffset="['50','130','130','130']" 
+                           data-y="['top','top','top','top']" data-voffset="['240','240','180','200']"  
+                           data-fontsize="['72','72','62','52']"
+                           data-lineheight="['82','82','72','62']"
+                           data-width="['700','700','700','90%']"
+                           data-height="['none','none','none','none']"
+                           data-whitespace="['normal','normal','normal','normal']"
+                       
+                           data-type="text" 
+                           data-responsive_offset="on" 
+                          data-frames='[{"delay":"+790","speed":1500,"sfxcolor":"#fff","sfx_effect":"blockfromleft","frame":"0","from":"z:0;","to":"o:1;","ease":"Power4.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
+                           data-textAlign="['left','left','left','left']"
+                           data-paddingtop="[5,5,5,5]"
+                           data-paddingright="[0,0,0,0]"
+                           data-paddingbottom="[0,0,0,0]"
+                           data-paddingleft="[0,0,0,0]"
+                       
+                           style="z-index: 13; 
+                           white-space: normal; 
+                           font-weight: 700;
+                           color:#111;
+                           border-width:0px;font-family: 'Poppins', sans-serif; text-transform:uppercase ;">
+                           <div>PAINTS</div>
+                           
+                           </div>
+                       
+                           <!-- LAYER NR. 5 [ for block] -->
+
+                           <div class="tp-caption rev-btn  tp-resizeme slider-block" 
+                               id="slide-902-layer-3" 
+                               data-x="['left','left','left','left']" data-hoffset="['0','80','80','60']" 
+                               data-y="['middle','middle','middle','middle']" data-voffset="['0','0','0','0']" 
+                               data-width="none"
+                               data-height="none"
+                               data-whitespace="nowrap"                     
+                               data-type="button" 
+                               data-responsive_offset="on" 
+           
+                               data-frames='[{"from":"y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","speed":1500,"to":"o:1;","delay":1000,"ease":"Power3.easeInOut"},
+                               {"delay":"wait","speed":500,"to":"y:[-100%];","mask":"x:inherit;y:inherit;s:inherit;e:inherit;","ease":"Power1.easeIn"}]'
+                               
+                               data-textAlign="['left','left','left','left']"
+                               data-paddingtop="[250,250,250,200]"
+                               data-paddingright="[150,150,150,150]"
+                               data-paddingbottom="[250,250,250,200]"
+                               data-paddingleft="[150,150,150,150]"
+           
+                               style="z-index: 8;"><div class="rs-wave"  data-speed="1" data-angle="0" data-radius="2px"></div></div>   
+
+                           
+                           <!-- LAYER NR. 5 [ for block] -->
+                           <div class="tp-caption   tp-resizeme" 
+                           id="slide-902-layer-4" 
+                           data-x="['left','left','left','left']" data-hoffset="['50','130','130','130']" 
+                           data-y="['top','top','top','top']" data-voffset="['410','410','350','340']"  
+                           data-fontsize="['20','20','38','28']"
+                           data-lineheight="['28','28','48','38']"
+                           data-width="['600','600','700','600']"
+                           data-height="['none','none','none','none']"
+                           data-whitespace="['normal','normal','normal','normal']"
+                       
+                           data-type="text" 
+                           data-responsive_offset="on" 
+                           data-frames='[{"delay":"+790","speed":1500,"sfxcolor":"#fff","sfx_effect":"blockfromleft","frame":"0","from":"z:0;","to":"o:1;","ease":"Power4.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
+                           data-textAlign="['left','left','left','left']"
+                           data-paddingtop="[5,5,5,5]"
+                           data-paddingright="[0,0,0,0]"
+                           data-paddingbottom="[0,0,0,0]"
+                           data-paddingleft="[0,0,0,0]"
+                       
+                           style="z-index: 13; 
+                           white-space: normal; 
+                           font-weight: 500;
+                           color:#111;
+                            border-width:0px;font-family: 'Poppins', sans-serif;">
+                           We deliver the best paints for adding perfect colours to your dream projects.
+                           
+                           </div>                                                               
+                       
+                           <!-- LAYER NR. 6 [ for see all service botton ] -->
+                           <div class="tp-caption tp-resizeme" 	
+                           id="slide-902-layer-5"						
+                           data-x="['left','left','left','left']" data-hoffset="['50','130','130','130']" 
+   
+                           data-y="['top','top','top','top']" data-voffset="['500','520','540','480']"  
+                           data-lineheight="['none','none','none','none']"
+                           data-width="['300','300','300','300']"
+                           data-height="['none','none','none','none']"
+                           data-whitespace="['normal','normal','normal','normal']"
+                           
+                           data-type="text" 
+                           data-responsive_offset="on"
+                           data-frames='[ 
+                           {"from":"y:100px(R);opacity:0;","speed":2000,"to":"o:1;","delay":2000,"ease":"Power4.easeOut"},
+                           {"delay":"wait","speed":1000,"to":"y:-50px;opacity:0;","ease":"Power2.easeInOut"}
+                           ]'
+                           data-textAlign="['left','left','left','left']"
+                           data-paddingtop="[0,0,0,0]"
+                           data-paddingright="[0,0,0,0]"
+                           data-paddingbottom="[0,0,0,0]"
+                           data-paddingleft="[0,0,0,0]"
+                           
+                           style="z-index:100; text-transform:uppercase;">
+                           <a href="/products/" class="site-button-secondry btn-effect">More About</a>
+                           </div>
+    
+                       </li>
 
                          
                     </ul>
@@ -652,7 +824,13 @@
                                             <div class="mt-img-effect zoom-slow">
                                                 <a href="javascript:void(0);"><img src="{% static 'web/images/gallery/pic2.jpg' %}" alt=""></a>
                                            </div>
-                                        </div>                                                                                                                                                                
+                                        </div>  
+                                        <!-- COLUMNS 6 --> 
+                                        <div class="item ">
+                                            <div class="mt-img-effect zoom-slow">
+                                                <a href="javascript:void(0);"><img src="{% static 'web/images/gallery/pic7.jpg' %}" alt=""></a>
+                                           </div>
+                                        </div>                                                                                                                                                              
                                    </div>
                            		</div>
                                 
@@ -889,7 +1067,7 @@
                     <div class="services-half-bottom">
                         <div class="container">
                             <div class="row">
-                                <div class="col-md-3 col-sm-6">
+                                <div class="col-lg-4 col-md-4  col-sm-6 col-6">
                                     
                                     <div class="mt-icon-box-wraper m-b30">
                                         <div class="relative icon-count-2 bg-gray p-a30 p-tb50">
@@ -907,7 +1085,7 @@
                                     
                                 </div>
                                 
-                                <div class="col-md-3 col-sm-6">
+                                <div class="col-lg-4 col-md-4  col-sm-6 col-6">
                                     
                                     <div class="mt-icon-box-wraper m-b30">
                                         <div class="relative icon-count-2 bg-gray p-a30 p-tb50">
@@ -925,7 +1103,7 @@
                                     
                                 </div>
 
-                                <div class="col-md-3 col-sm-6">
+                                <div class="col-lg-4 col-md-4  col-sm-6 col-6">
                                     
                                     <div class="mt-icon-box-wraper m-b30">
                                         <div class="relative icon-count-2 bg-gray p-a30 p-tb50">
@@ -934,8 +1112,25 @@
                                                 <span class="icon-cell"><img src="{% static 'web/images/icon/toolbox.png' %}" alt=""></span>
                                             </div>
                                             <div class="icon-content">
-                                                <h4 class="mt-tilte m-b25">Cement and Net </h4>
-                                                <p>Build with the best quality cement and make your partitions with the best nest and meshes from Excel Traders.</p>
+                                                <h4 class="mt-tilte m-b25">Cement  </h4>
+                                                <p>Build with the best quality cement from leading brands for outstanding build strength.</p>
+                                                <!-- <a href="#" class="site-button-link" data-hover="Read More">Read More <i class="fa fa-angle-right arrow-animation"></i></a> -->
+                                            </div>
+                                        </div>
+                                    </div>                            	
+                                    
+                                </div>
+                                <div class="col-lg-4 col-md-4  col-sm-6 col-6">
+                                    
+                                    <div class="mt-icon-box-wraper m-b30">
+                                        <div class="relative icon-count-2 bg-gray p-a30 p-tb50">
+                                            <span class="icon-count-number">4</span>
+                                            <div class="icon-md inline-icon m-b15 text-primary scale-in-center">
+                                                <span class="icon-cell"><img src="{% static 'web/images/icon/toolbox.png' %}" alt=""></span>
+                                            </div>
+                                            <div class="icon-content">
+                                                <h4 class="mt-tilte m-b25">Net  </h4>
+                                                <p>Make your partitions with the best nest and meshes from Excel Traders for excellent construction.</p>
                                                 <!-- <a href="#" class="site-button-link" data-hover="Read More">Read More <i class="fa fa-angle-right arrow-animation"></i></a> -->
                                             </div>
                                         </div>
@@ -943,17 +1138,34 @@
                                     
                                 </div>
 
-                                <div class="col-md-3 col-sm-6">
+                                <div class="col-lg-4 col-md-4  col-sm-6 col-6">
                                     
                                     <div class="mt-icon-box-wraper m-b30">
                                         <div class="relative icon-count-2 bg-gray p-a30 p-tb50">
-                                            <span class="icon-count-number">4</span>
+                                            <span class="icon-count-number">5</span>
                                             <div class="icon-md inline-icon m-b15 text-primary scale-in-center">
                                                 <span class="icon-cell"><img src="{% static 'web/images/icon/compass.png' %}" alt=""></span>
                                             </div>
                                             <div class="icon-content">
-                                                <h4 class="mt-tilte m-b25">Building Materials</h4>
-                                                <p>Excel Traders delivers the complete solution for all your needs for building materials at the best reasonable price</p>
+                                                <h4 class="mt-tilte m-b25">Paint</h4>
+                                                <p>Paint your desired colours for your favourite constructions to make a mesmerizing outlook.</p>
+                                                <!-- <a href="#" class="site-button-link" data-hover="Read More">Read More <i class="fa fa-angle-right arrow-animation"></i></a> -->
+                                            </div>
+                                        </div>
+                                    </div>                            	
+                                    
+                                </div>	
+                                <div class="col-lg-4 col-md-4  col-sm-6 col-6">
+                                    
+                                    <div class="mt-icon-box-wraper m-b30">
+                                        <div class="relative icon-count-2 bg-gray p-a30 p-tb50">
+                                            <span class="icon-count-number">6</span>
+                                            <div class="icon-md inline-icon m-b15 text-primary scale-in-center">
+                                                <span class="icon-cell"><img src="{% static 'web/images/icon/compass.png' %}" alt=""></span>
+                                            </div>
+                                            <div class="icon-content">
+                                                <h4 class="mt-tilte m-b25">Net & paint</h4>
+                                                <p>Build with the highest quality nets and paint from Excel Traders.</p>
                                                 <!-- <a href="#" class="site-button-link" data-hover="Read More">Read More <i class="fa fa-angle-right arrow-animation"></i></a> -->
                                             </div>
                                         </div>
